--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
      <h1>hello, world</h1>
      <a href="about.html">About the whaley goodness</a>
      <p>Call me Ishmael.</p>
-     <a href="https://www.flickr.com/photos/28883788@N04/10097824543"><p> oi</p>
+     <a href="https://www.flickr.com/photos/28883788@N04/10097824543"><p> oi!</p>
 
       <img src="images/breaching_whale.jpg" alt='waley goodness'/>
     </a>
