--- a/about.html
+++ b/about.html
@@ -2,8 +2,10 @@
  <html>
    <head>
      <title>About ma whale</title>
+     <!-- add something to fix trademark -->
    </head>
    <body>
+
      <h1>About Us</h1>
      <p>
       This site is a sample project for the <strong>awesome</strong> Git tutorial <a href="http://learnenough.com/git-tutorial"><em>Learn Enough™ Git to Be Dangerous</em>.</a>
