fix trademark character display

--- a/about.html
+++ b/about.html
@@ -2,7 +2,8 @@
  <html>
    <head>
      <title>About ma whale</title>
-     <!-- add something to fix trademark -->
+      <meta charset='utf-8'>
+      <!-- add something to fix trademark -->
    </head>
    <body>
 
